--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/code1.txt
+/CppProperties.json
+/CursorSmoothMove.vcxproj
+/CursorSmoothMove.vcxproj.filters
