--- a/CursorSmoothMove.vcxproj
+++ b/CursorSmoothMove.vcxproj
@@ -134,7 +134,7 @@
       <AdditionalIncludeDirectories>C:\Users\sssr2\source\Libraries\SFML\SFML\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
